--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" target="_blank">
+				<a href="gallery.html" target="_blank">
 					<i class="fa fa-folder-open-o"></i> 
 				</a>
 			</li>
