cambiar de -sergio- a -christian-

--- a/js/tmps/content-contact.html
+++ b/js/tmps/content-contact.html
@@ -37,14 +37,14 @@
 				<i class="fa fa-whatsapp"></i><span>604 356 300</span>
 			</li>
 			<li class="c-form__wrap-infos__item">
-				<i class="fa fa-at"></i><span>sergio.quispe.h@hotmail.com</span>
+				<i class="fa fa-at"></i><span>chris.ccora@hotmail.com</span>
 			</li>
 			<li class="c-form__wrap-infos__item">
 				<i class="fa fa-phone"></i><span>604 356 300</span>
 			</li>
-			<a target="_blank" href="sqh.epizzy.com/wp" class="c-form__wrap-infos__item">
+			<!-- <a target="_blank" href="sqh.epizzy.com/wp" class="c-form__wrap-infos__item">
 				<i class="fa fa-folder-open-o"></i><span>Mis trabajos</span>
-			</a>
+			</a> -->
 		</ul>
 
 	</div>
