--- a/js/tmps/content-portrait.html
+++ b/js/tmps/content-portrait.html
@@ -83,7 +83,7 @@
 		<div class="portrait-wrapper__back-animate__base__picture">
 			<img class="" src="img/web-lover.jpg">
 		</div>
-		<h5 class="portrait-wrapper__back-animate__base__title title-absolute">sergio quispe</h5>
+		<h5 class="portrait-wrapper__back-animate__base__title title-absolute">christian ccora</h5>
 	</div>
 </div>
 
