cambios en contacto

--- a/js/tmps/content-contact.html
+++ b/js/tmps/content-contact.html
@@ -34,10 +34,12 @@
 
 		<ul class="c-form__wrap-infos">
 			<li class="c-form__wrap-infos__item">
-				<i class="fa fa-whatsapp"></i><span>604 356 300</span>
+				<i class="fa fa-whatsapp"></i>
+				<span>604 356 300</span>
 			</li>
 			<li class="c-form__wrap-infos__item">
-				<i class="fa fa-at"></i><span>chris.ccora@hotmail.com</span>
+				<i class="fa fa-at"></i>
+				<span>chris.ccora@hotmail.com</span>
 			</li>
 			<li class="c-form__wrap-infos__item">
 				<i class="fa fa-phone"></i><span>604 356 300</span>
