Añadir React, Vue

--- a/js/tmps/content-developer.html
+++ b/js/tmps/content-developer.html
@@ -161,8 +161,26 @@
 						</li>
 						<li class="list-skills__wrap-item">
 							<p class="list-skills__wrap-item__txt">
-								<span class="list-skills__wrap-item__txt__txt-skill">Angular 1/5</span>
+								<span class="list-skills__wrap-item__txt__txt-skill">Angular 2+</span>
 								<span class="list-skills__wrap-item__txt__txt-percentage">60%</span>
+							</p>
+							<div class="list-skills__wrap-item__graphic">
+								<div class="list-skills__wrap-item__graphic__percentage"></div>
+							</div>
+						</li>
+						<li class="list-skills__wrap-item">
+							<p class="list-skills__wrap-item__txt">
+								<span class="list-skills__wrap-item__txt__txt-skill">React 17+</span>
+								<span class="list-skills__wrap-item__txt__txt-percentage">50%</span>
+							</p>
+							<div class="list-skills__wrap-item__graphic">
+								<div class="list-skills__wrap-item__graphic__percentage"></div>
+							</div>
+						</li>
+						<li class="list-skills__wrap-item">
+							<p class="list-skills__wrap-item__txt">
+								<span class="list-skills__wrap-item__txt__txt-skill">Vue js - 2 | 3</span>
+								<span class="list-skills__wrap-item__txt__txt-percentage">70%</span>
 							</p>
 							<div class="list-skills__wrap-item__graphic">
 								<div class="list-skills__wrap-item__graphic__percentage"></div>
