Añadir Vue, React a DATA_SKILLS module

--- a/js/tmps/content-developer.html
+++ b/js/tmps/content-developer.html
@@ -51,7 +51,7 @@
 				<li class="list-skills__wrap-item">
 					<div class="list-skills__wrap-item__info-skill">
 						<p class="list-skills__wrap-item__txt">
-							<span class="list-skills__wrap-item__txt__txt-skill">Desarollo UI</span>
+							<span class="list-skills__wrap-item__txt__txt-skill">Desarrollo UI</span>
 							<span class="list-skills__wrap-item__txt__txt-percentage">95%</span>
 						</p>
 						<div class="list-skills__wrap-item__graphic">
